--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,38 +6,31 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - REDIS_NODES=redis://redis1:6379,redis://redis2:6379,redis://redis3:6379
+      # Redis shard configuration — connecting to two Redis instances
+      - REDIS_NODES=redis://redis1:7070,redis://redis2:7071
       - DEBUG=true
     depends_on:
       - redis1
       - redis2
-      - redis3
 
+  # Redis shard 1 running on port 7070 (host) -> 6379 (container)
   redis1:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "7070:6379"
     volumes:
       - redis1_data:/data
     command: redis-server --appendonly yes
 
+  # Redis shard 2 running on port 7071 (host) -> 6379 (container)
   redis2:
     image: redis:7
     ports:
-      - "6380:6379"
+      - "7071:6379"
     volumes:
       - redis2_data:/data
-    command: redis-server --appendonly yes
-
-  redis3:
-    image: redis:7
-    ports:
-      - "6381:6379"
-    volumes:
-      - redis3_data:/data
     command: redis-server --appendonly yes
 
 volumes:
   redis1_data:
   redis2_data:
-  redis3_data: 
